--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+   <head>
+     <meta http-equiv="refresh" content="0; URL='https://rcmedeiros.github.io/template/'" />
+  </head>
   <body>
     Hello World
   </body>
